Fixed gradient issue on mobile

--- a/css/index.css
+++ b/css/index.css
@@ -424,7 +424,6 @@ body {
 /* ------------- Projects.html ------------- */
 
 .projects-body-container {
-    background: linear-gradient(to right, var(--8darkest), var(--8darkest), var(--8darkest), var(--7), var(--7), var(--7), var(--7), var(--7), var(--8darkest), var(--8darkest), var(--8darkest))no-repeat 0 0;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -439,7 +438,6 @@ body {
     font-size: 4.6rem;
     font-weight: 730;
     color: var(--1brightest);
-    background-color: var(--7);
     user-select: none;
 }
 
@@ -492,7 +490,7 @@ body {
     font-family: 'Sofia Sans Extra Condensed', sans-serif;
     letter-spacing: .03rem;
     padding: .3rem .7rem;
-    background-color: var(--6);
+    background: linear-gradient(120deg, var(--7), var(--7), var(--6), var(--6), var(--6), var(--6), var(--6), var(--7), var(--7)) no-repeat 0 0;
     color: var(--1brightest);
     border: none;
     cursor: pointer;
@@ -514,7 +512,7 @@ body {
 }
 
 .pj-btn:hover {
-    box-shadow: 0 0 9px 1px var(--3);
+    box-shadow: 0 0 9px 1px var(--5);
     border: 1px solid var(--2);
 }
 
@@ -610,6 +608,12 @@ body {
     .body-container {
         background: linear-gradient(to bottom, var(--8darkest), var(--8darkest), var(--8darkest), var(--7), var(--7), var(--7), var(--7), var(--7), var(--8darkest), var(--8darkest), var(--8darkest))no-repeat 0 0;
     }
+    .projects-body-container {
+        background: linear-gradient(to bottom, var(--8darkest), var(--8darkest), var(--8darkest), var(--7), var(--7), var(--7), var(--7), var(--7), var(--8darkest), var(--8darkest), var(--8darkest))no-repeat 0 0;
+    }
+    .projects-title {
+        background-color: var(--8darkest);
+    }
 }
 
 @media only screen and (min-width: 600px) {
@@ -687,6 +691,12 @@ body {
     }
     .body-container {
         background: linear-gradient(to right, var(--8darkest), var(--8darkest), var(--8darkest), var(--7), var(--7), var(--7), var(--7), var(--7), var(--8darkest), var(--8darkest), var(--8darkest))no-repeat 0 0;
+    }
+    .projects-body-container {
+        background: linear-gradient(to right, var(--8darkest), var(--8darkest), var(--8darkest), var(--7), var(--7), var(--7), var(--7), var(--7), var(--8darkest), var(--8darkest), var(--8darkest))no-repeat 0 0;
+    }
+    .projects-title {
+        background-color: var(--7);
     }
 }
 
@@ -769,6 +779,12 @@ body {
     .body-container {
         background: linear-gradient(to right, var(--8darkest), var(--8darkest), var(--8darkest), var(--7), var(--7), var(--7), var(--7), var(--7), var(--8darkest), var(--8darkest), var(--8darkest))no-repeat 0 0;
     }
+    .projects-body-container {
+        background: linear-gradient(to right, var(--8darkest), var(--8darkest), var(--8darkest), var(--7), var(--7), var(--7), var(--7), var(--7), var(--8darkest), var(--8darkest), var(--8darkest))no-repeat 0 0;
+    }
+    .projects-title {
+        background-color: var(--7);
+    }
 }
 
 @media only screen and (min-width: 1158px) {
@@ -846,6 +862,12 @@ body {
     .body-container {
         background: linear-gradient(to right, var(--8darkest), var(--8darkest), var(--8darkest), var(--7), var(--7), var(--7), var(--7), var(--7), var(--8darkest), var(--8darkest), var(--8darkest))no-repeat 0 0;
     }
+    .projects-body-container {
+        background: linear-gradient(to right, var(--8darkest), var(--8darkest), var(--8darkest), var(--7), var(--7), var(--7), var(--7), var(--7), var(--8darkest), var(--8darkest), var(--8darkest))no-repeat 0 0;
+    }
+    .projects-title {
+        background-color: var(--7);
+    }
 }
 
 @media only screen and (min-width: 1303px) {
@@ -922,5 +944,11 @@ body {
     }
     .body-container {
         background: linear-gradient(to right, var(--8darkest), var(--8darkest), var(--8darkest), var(--7), var(--7), var(--7), var(--7), var(--7), var(--8darkest), var(--8darkest), var(--8darkest))no-repeat 0 0;
+    }
+    .projects-body-container {
+        background: linear-gradient(to right, var(--8darkest), var(--8darkest), var(--8darkest), var(--7), var(--7), var(--7), var(--7), var(--7), var(--8darkest), var(--8darkest), var(--8darkest))no-repeat 0 0;
+    }
+    .projects-title {
+        background-color: var(--7);
     }
 }
